added method showing search results

--- a/app/views/submissions/search_business.html.erb
+++ b/app/views/submissions/search_business.html.erb
@@ -7,5 +7,9 @@
 <br><br>
 </div>
 </form>
-  
+
+ <% @search_result.to_a.each do |e| %>
+ <%= link_to "Test", "/localeze/#{e["id"]}"%> 
+ <% end %>
+
 
