added localeze info, methods for indexing directory

--- a/app/views/submissions/search_business.html.erb
+++ b/app/views/submissions/search_business.html.erb
@@ -16,3 +16,6 @@ submit your business to Localeze
  <%= "#{e["business_name"]}, #{e["city"]}, #{e["state"]}, #{e["phone"]}" %> 
  <br><br>
  <% end %>
+
+<%= link_to "DIRECTORY", "/index_directory", :id=>"index_directory"  %>
+
