--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -23,3 +23,20 @@ margin-top: 60px;
 margin-bottom: 0px;
 text-align: center;
 }
+
+#index_directory {
+  display: block;
+  min-width: 15rem;
+  width: 15rem;
+  padding: 0.5rem 2rem;
+  font-size: 1.2rem;
+  margin: auto;
+  text-align: center;
+  border-radius: 4px;
+  text-transform: uppercase;
+  cursor: pointer;
+  border: none;
+  border-bottom: 2px solid #D0522F;
+  background: rgb(245, 101, 74);
+  color: rgb(238, 238, 238);
+}
