csv directory box v1.0

--- a/app/views/submissions/search_business.html.erb
+++ b/app/views/submissions/search_business.html.erb
@@ -1,21 +1,41 @@
+<div id="search_business_container">
+	<h1> DIRECTORY BOX</h1>
+	<div align="center" style="color: rgb(200, 190, 0)"> 
+    Generate CSV for Localeze
+	</div>
+	<br><br>
 
-<h1> DIRECTORY BOX</h1>
-<div align="center"> 
-submit your business to Localeze
+
+	<div id="columns">
+		<div id="results_container" class="column first">
+			<% if @search_result %>
+				<div class="title">Search Results</div>
+				<% @search_result.to_a.each do |e| %>
+					<%= link_to "select", "/manage/#{e["id"]}", class: "search_result_link", target: "_blank" %> 
+					<%= "#{e["business_name"]}, #{e["city"]}, #{e["state"]}, #{e["phone"]}" %> 
+					<br><br>
+				<% end %>
+			<% end %>
+		</div>
+		<div id="business_search_form" class="column second">
+			<%= form_tag "/send" do %>
+			  <div align="center">
+			  <%= text_field_tag :business_name, nil, placeholder:"Business Name"%>
+			  </div>
+			<% end %> 
+		</div>
+
+		<div id="submissions_container" class="column third">
+			<div class="title">Recent Activity</div>
+			<% @submissions.to_a.each do |s| %>
+				<div class="submission">
+					<% client = get_client_by_id2(s.client_id) %>
+					<span class="business_name"><%= client["business_detail"]["business_name"] %></span>
+					<span class="submission_date"><%= s.registration_date.strftime("%D @ %l:%M %p") %></span>
+				</div>
+			<% end %>	
+		</div> 
+
+	</div>
+
 </div>
-<br><br>
-
-<%= form_tag "/send" do %>
-  <div align="center">
-  <%= text_field_tag :business_name, nil, placeholder:"Business Name"%>
-</div>
-<%end %> 
-
- <% @search_result.to_a.each do |e| %>
- <%= link_to "select", "/manage/#{e["id"]}"%> 
- <%= "#{e["business_name"]}, #{e["city"]}, #{e["state"]}, #{e["phone"]}" %> 
- <br><br>
- <% end %>
-
-<%= link_to "DIRECTORY", "/index_directory", :id=>"index_directory"  %>
-
