--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,17 @@
  *= require_self
  */
 
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "helvetica";
+  color: #444;
+}
+
 H1 {
 color: #7996EC;
 font-family: arial, sans-serif;
